Closed Bug 1105065 Opened 10 years ago Closed 10 years ago

--disable-sandbox builds warn or error out with "dom/media/gmp/GMPLoader.cpp:68:19: error: private field 'mSandboxStarter' is not used [-Werror,-Wunused-private-field]"

Categories

(Core :: Audio/Video, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla37

People

(Reporter: dholbert, Assigned: dholbert)

Details

Attachments

(1 file)

Recently-introduced build warning (treated as error):
{
dom/media/gmp/GMPLoader.cpp:68:19: error: private field 'mSandboxStarter' is not used [-Werror,-Wunused-private-field]
}


I'm using using clang 3.5 and these lines in my mozconfig:

ac_add_options --enable-warnings-as-errors
ac_add_options --disable-sandbox
cpearce knows this code better than I do, but I think we might be able to remove the ifdef on line 166 — if MOZ_SANDBOX and/or MOZ_GMP_SANDBOX is undefined, the sandbox starter should be nullptr.
Flags: needinfo?(cpearce)
(In reply to Jed Davis [:jld] from comment #1)
> cpearce knows this code better than I do, but I think we might be able to
> remove the ifdef on line 166 — if MOZ_SANDBOX and/or MOZ_GMP_SANDBOX is
> undefined, the sandbox starter should be nullptr.

Yes, I think this would work.
Flags: needinfo?(cpearce)
Summary: dom/media/gmp/GMPLoader.cpp:68:19: error: private field 'mSandboxStarter' is not used [-Werror,-Wunused-private-field] → --disable-sandbox builds warn or error out with "dom/media/gmp/GMPLoader.cpp:68:19: error: private field 'mSandboxStarter' is not used [-Werror,-Wunused-private-field]"
Attached patch fix v1Splinter Review
This patch removes the #ifdef discussed above.

I can confirm that this removes the build warning & lets me compile successfully with --disable-sandbox and --enable-warnings-as-errors and clang 3.5.
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #8536970 - Flags: review?(cpearce)
Attachment #8536970 - Flags: review?(cpearce) → review+
https://hg.mozilla.org/mozilla-central/rev/001e0c8c26b4
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: