Bug 1105065: Remove an #ifdef, to fix a -Wunused-private-field build warning in GMPLoader.cpp for builds with --disable-sandbox. r=cpearce